--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,8 @@ body {
   padding-top: 7rem;
 }
 .chat__border {
-  width: 25rem;
-  height: 45rem;
+  width: 23rem;
+  height: 47rem;
   border: 1rem solid var(--white);
   border-radius: 3rem;
   position: absolute;
@@ -227,4 +227,34 @@ input[type='radio']:checked:after {
   display: inline-block;
   visibility: visible;
   border: 0.2rem solid var(--veryLightMagenta);
+}
+.chat__message {
+  margin: 1rem 1rem;
+}
+.chat__message input {
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  border-radius: 2rem;
+  background: var(--white);
+}
+.chat__message input::placeholder {
+  color: var(--grayishBlue);
+  font-size: 1rem;
+}
+.chat__message button {
+  position: absolute;
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-top: 0.5rem;
+  margin-left: -3rem;
+  border: none;
+  border-radius: 50%;
+  color: var(--white);
+  font-size: 1rem;
+  text-align: center;
+  background: var(--veryDarkDesaturatedViolet);
+}
+.chat__message button:hover {
+  cursor: pointer;
 }
