--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ html {
   padding: 0;
 }
 body {
+  height: 100%;
   font-family: var(--fontRubik);
   font-size: 1.6rem;
 }
@@ -37,6 +38,8 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   position: absolute;
+  top: 0;
+  bottom: 0;
 }
 .background {
   width: 18.75rem;
@@ -53,7 +56,6 @@ body {
   background: var(--lightGrayishViolet);
 }
 .chat {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -64,7 +66,7 @@ body {
   height: 47rem;
   border: 1rem solid var(--white);
   border-radius: 3rem;
-  position: absolute;
+  position: relative;
   background: var(--lightGrayishViolet);
   -webkit-box-shadow: 10px 7px 72px -20px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 7px 72px -20px rgba(0, 0, 0, 0.75);
@@ -263,4 +265,16 @@ input[type='radio']:checked:after {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+.main h1 {
+  margin-top: 6rem;
+  color: var(--veryDarkDesaturatedViolet);
+}
+.main p {
+  margin: 2.5rem 3rem;
+  margin-bottom: 8rem;
+  text-align: center;
+  line-height: 2.5rem;
+  color: var(--darkGrayishViolet);
 }
