desktop view finished

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,5 +341,30 @@ input[type='radio']:checked:after {
 }
 
 /* Desktop */
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
+  .background {
+    max-width: 60rem;
+    margin-left: -20rem;
+    border-radius: 0 0 40rem 40rem;
+  }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10rem;
+    height: 100vh;
+  }
+  .chat {
+    padding: 0;
+  }
+  .main,
+  .main h1,
+  .main p {
+    margin: 0;
+  }
+  .main p {
+    width: 45rem;
+    margin-top: 2.5rem;
+    text-align: left;
+  }
 }
