--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,11 @@ body {
   font-family: var(--fontRubik);
   font-size: 1.6rem;
 }
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  width: 100vw;
+.background {
+  width: 100%;
   position: absolute;
 }
-.background {
+.bg {
   max-width: 30rem;
   height: 80vh;
   background: var(--gradient);
@@ -342,7 +340,7 @@ input[type='radio']:checked:after {
 
 /* Desktop */
 @media (min-width: 1024px) {
-  .background {
+  .bg {
     max-width: 60rem;
     margin-left: -20rem;
     border-radius: 0 0 40rem 40rem;
